@@ -88,6 +88,7 @@ export(dt_nonstandard)
 export(dwish_chol)
 export(eigenNimbleList)
 export(expit)
+export(extractControlElement)
 export(getBUGSexampleDir)
 export(getBound)
 export(getDefinition)
